--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ GEMINI_API_KEY=your_api_key_here
 
 # Model Selection (optional, defaults to gemini-pro)
 GEMINI_MODEL=gemini-pro
+GEMINI_TEXT_MODEL=gemini-2.5-pro
+GEMINI_VISION_MODEL=gemini-2.5-flash
 
 # Output Configuration (optional)
 OUTPUT_DIR=./results
