Add extraction mode configuration to .env.example
- Introduced a new environment variable `EXTRACTION_MODE` set to "multimodal" in the `.env.example` file, enhancing the configuration options for the extraction process.
- This addition aligns with recent updates to support multimodal extraction capabilities, improving flexibility in the application.

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ GEMINI_MODEL=gemini-pro
 GEMINI_TEXT_MODEL=gemini-2.5-pro
 GEMINI_VISION_MODEL=gemini-2.5-flash
 
+# Extraction Mode
+EXTRACTION_MODE=multimodal
+
 # Output Configuration (optional)
 OUTPUT_DIR=./results
 DB_PATH=./msa_extractor.db
