Update `.env.example` with Comprehensive Environment Variables for MSA Metadata Extractor
- Expanded the `.env.example` file to include detailed environment variable configurations for the MSA Metadata Extractor, enhancing clarity and usability.
- Added sections for API configuration, extraction strategy, Tesseract OCR settings, Google Cloud Vision configuration, and logging options.
- Provided comprehensive comments and options for each variable, ensuring users have clear guidance for setting up their environment.
- This update improves the overall configuration experience, making it easier for users to customize their setup according to their needs.

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,176 @@
-﻿# Gemini API Configuration
+﻿# ============================================================================
+# MSA Metadata Extractor - Environment Variables Configuration
+# ============================================================================
+# Copy this file to .env and update with your actual values
+# Never commit .env to version control (it's in .gitignore)
+# ============================================================================
+
+# ============================================================================
+# REQUIRED: API Configuration
+# ============================================================================
+
+# Gemini API Key (REQUIRED)
 # Get your API key from: https://makersuite.google.com/app/apikey
-GEMINI_API_KEY=your_api_key_here
+GEMINI_API_KEY=your_gemini_api_key_here
 
-# Model Selection (optional, defaults to gemini-pro)
-GEMINI_MODEL=gemini-pro
+# ============================================================================
+# Gemini Model Configuration
+# ============================================================================
+
+# Text LLM model for metadata extraction from text
+# Options: gemini-2.5-pro, gemini-2.5-flash, gemini-1.5-pro, gemini-1.5-flash
 GEMINI_TEXT_MODEL=gemini-2.5-pro
-GEMINI_VISION_MODEL=gemini-2.5-flash
 
-# Extraction Mode
+# Vision LLM model for image-based extraction and multimodal input
+# Options: gemini-2.5-pro, gemini-2.5-flash, gemini-1.5-pro, gemini-1.5-flash
+GEMINI_VISION_MODEL=gemini-2.5-pro
+
+# Legacy model (kept for backwards compatibility, not used)
+# GEMINI_MODEL=gemini-pro
+
+# ============================================================================
+# Extraction Strategy & Mode
+# ============================================================================
+
+# Global extraction strategy
+# Options: auto, text_extraction, gemini_vision, tesseract, gcv
+# - auto: Automatically detect PDF type and choose best strategy
+# - text_extraction: Force text-based extraction
+# - gemini_vision: Force Gemini Vision API (direct image processing)
+# - tesseract: Force Tesseract OCR
+# - gcv: Force Google Cloud Vision OCR
+EXTRACTION_STRATEGY=auto
+
+# Extraction mode for mixed PDFs (text + image pages)
+# Options: text_only, image_only, text_ocr, text_image, multimodal
+# - text_only: Extract text only, ignore image pages
+# - image_only: Extract from images only (OCR or vision)
+# - text_ocr: Extract text + OCR text from image pages (default)
+# - text_image: Extract text + send image pages directly to vision model
+# - multimodal: Send text + images together to vision model (best for signatory pages)
 EXTRACTION_MODE=multimodal
 
-# Output Configuration (optional)
+# OCR Engine (for image-based PDFs when not using Gemini Vision)
+# Options: tesseract, gcv
+# Note: gemini_vision is handled separately (no OCR step needed)
+OCR_ENGINE=tesseract
+
+# ============================================================================
+# Tesseract OCR Configuration
+# ============================================================================
+
+# Tesseract executable path (optional, for non-standard installations)
+# Windows example: C:\Program Files\Tesseract-OCR\tesseract.exe
+# Linux example: /usr/bin/tesseract (usually in PATH, can omit)
+# Docker: Usually in PATH, no configuration needed
+# Leave empty to use system PATH
+TESSERACT_CMD=
+
+# Tesseract language(s) for OCR
+# Use ISO 639-2 language codes (e.g., "eng", "eng+fra" for multiple languages)
+# Default: "eng" (English)
+TESSERACT_LANG=eng
+
+# Tesseract data directory (optional, for custom tessdata location)
+# Windows example: C:\Program Files\Tesseract-OCR\tessdata
+# Linux example: /usr/share/tesseract-ocr/5/tessdata (usually default, can omit)
+# Docker: Usually default, no configuration needed
+# Leave empty to use default location
+TESSDATA_PREFIX=
+
+# ============================================================================
+# Google Cloud Vision Configuration (Optional)
+# ============================================================================
+
+# Path to Google Cloud Vision service account credentials JSON file
+# Required only if using OCR_ENGINE=gcv or EXTRACTION_STRATEGY=gcv
+# GCV_CREDENTIALS_PATH=/path/to/service-account.json
+
+# Google Cloud Project ID (optional, usually auto-detected from credentials)
+# GCV_PROJECT_ID=your-project-id
+
+# ============================================================================
+# PDF Preprocessing Configuration
+# ============================================================================
+
+# DPI for rendering PDF pages as images (150, 300, 600)
+# Higher DPI = better quality but larger files
+# 300 DPI is optimal for OCR (balance between quality and size)
+PDF_PREPROCESSING_DPI=300
+
+# Enable OpenCV preprocessing for scanned PDFs (master switch)
+# Options: true, false
+ENABLE_IMAGE_PREPROCESSING=true
+
+# Individual preprocessing steps (can be toggled)
+ENABLE_DESKEW=true      # Correct page rotation
+ENABLE_DENOISE=true     # Remove speckle noise
+ENABLE_ENHANCE=true     # Apply CLAHE contrast enhancement
+ENABLE_BINARIZE=true    # Adaptive thresholding to black/white
+
+# ============================================================================
+# Retry Configuration
+# ============================================================================
+
+# Maximum number of retry attempts for API calls
+API_MAX_RETRIES=3
+
+# Initial retry delay in seconds (exponential backoff)
+API_RETRY_INITIAL_DELAY=1.0
+
+# Maximum retry delay in seconds (caps exponential backoff)
+API_RETRY_MAX_DELAY=30.0
+
+# ============================================================================
+# Logging Configuration
+# ============================================================================
+
+# Overall log level
+# Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL=INFO
+
+# File logging
+LOG_FILE_ENABLED=true
+LOG_FILE_PATH=./logs
+LOG_FILE_FORMAT=text              # Options: text, json
+LOG_FILE_ROTATION_DAYS=30
+LOG_FILE_MAX_SIZE_MB=10
+
+# Console logging
+LOG_CONSOLE_ENABLED=true
+LOG_CONSOLE_FORMAT=text           # Options: text, json
+
+# Module-specific log levels (optional overrides)
+# LOG_LEVEL_EXTRACTORS=DEBUG
+# LOG_LEVEL_AI=INFO
+# LOG_LEVEL_OCR=WARNING
+
+# ============================================================================
+# Paths & Storage
+# ============================================================================
+
+# Output directory for extracted JSON files
+# Default: ./results
 OUTPUT_DIR=./results
+
+# SQLite database path (if using database storage)
+# Default: ./msa_extractor.db
 DB_PATH=./msa_extractor.db
 
-# Logging Level (optional)
-LOG_LEVEL=INFO
+# ============================================================================
+# Advanced Configuration
+# ============================================================================
+
+# Maximum text length for LLM processing (characters)
+# For longer docs, implement chunking + aggregation (deferred to next iteration)
+# MAX_TEXT_LENGTH=50000
+
+# ============================================================================
+# Notes
+# ============================================================================
+# - All paths use forward slashes or pathlib (cross-platform compatible)
+# - Boolean values: use "true" or "false" (case-insensitive)
+# - Empty values use system defaults
+# - See docs/configuration.md for detailed documentation
+# - See docs/LINUX_AND_DOCKER_SETUP.md for Docker configuration
+# ============================================================================
