Update `.env.example` to Reflect New Extraction Architecture and Configuration Options
- Revised the `.env.example` file to introduce a new extraction architecture, replacing the previous extraction strategy and mode with more descriptive options for content extraction and LLM processing.
- Added detailed comments and examples for each configuration option, enhancing clarity for users setting up their environment.
- This update improves the overall usability of the configuration file, providing users with clear guidance on how to customize their extraction methods and processing modes.

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@
 
 # Gemini API Key (REQUIRED)
 # Get your API key from: https://makersuite.google.com/app/apikey
-GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_API_KEY=
 
 # ============================================================================
 # Gemini Model Configuration
@@ -25,34 +25,31 @@ GEMINI_TEXT_MODEL=gemini-2.5-pro
 # Options: gemini-2.5-pro, gemini-2.5-flash, gemini-1.5-pro, gemini-1.5-flash
 GEMINI_VISION_MODEL=gemini-2.5-pro
 
-# Legacy model (kept for backwards compatibility, not used)
-# GEMINI_MODEL=gemini-pro
-
 # ============================================================================
-# Extraction Strategy & Mode
+# Extraction Configuration (NEW ARCHITECTURE)
 # ============================================================================
 
-# Global extraction strategy
-# Options: auto, text_extraction, gemini_vision, tesseract, gcv
-# - auto: Automatically detect PDF type and choose best strategy
-# - text_extraction: Force text-based extraction
-# - gemini_vision: Force Gemini Vision API (direct image processing)
-# - tesseract: Force Tesseract OCR
-# - gcv: Force Google Cloud Vision OCR
-EXTRACTION_STRATEGY=auto
+# Extraction Method: How to extract content from PDF pages
+# Options:
+#   - text_direct: Extract text directly from text pages, ignore image pages
+#   - ocr_all: Convert all pages to images and run OCR on all pages
+#   - ocr_images_only: Extract text from text pages + OCR only image pages (default)
+#   - vision_all: Convert all pages to images (no OCR, for vision LLM)
+#   - hybrid: Extract text from text pages + convert image pages to images (flexible)
+EXTRACTION_METHOD=hybrid
 
-# Extraction mode for mixed PDFs (text + image pages)
-# Options: text_only, image_only, text_ocr, text_image, multimodal
-# - text_only: Extract text only, ignore image pages
-# - image_only: Extract from images only (OCR or vision)
-# - text_ocr: Extract text + OCR text from image pages (default)
-# - text_image: Extract text + send image pages directly to vision model
-# - multimodal: Send text + images together to vision model (best for signatory pages)
-EXTRACTION_MODE=multimodal
+# LLM Processing Mode: How to process extracted content with LLMs
+# Options:
+#   - text_llm: Send all text (direct + OCR) to text LLM (default)
+#   - vision_llm: Send all images to vision LLM
+#   - multimodal: Send text + images together to vision LLM in single call
+#   - dual_llm: Send text to text LLM + images to vision LLM separately, then merge
+LLM_PROCESSING_MODE=multimodal
 
-# OCR Engine (for image-based PDFs when not using Gemini Vision)
+# OCR Engine: Which OCR engine to use when OCR is needed
 # Options: tesseract, gcv
-# Note: gemini_vision is handled separately (no OCR step needed)
+# Note: Only used when EXTRACTION_METHOD requires OCR (ocr_all, ocr_images_only)
+# Note: vision_all and multimodal don't use OCR
 OCR_ENGINE=tesseract
 
 # ============================================================================
@@ -83,7 +80,7 @@ TESSDATA_PREFIX=
 # ============================================================================
 
 # Path to Google Cloud Vision service account credentials JSON file
-# Required only if using OCR_ENGINE=gcv or EXTRACTION_STRATEGY=gcv
+# Required only if using OCR_ENGINE=gcv
 # GCV_CREDENTIALS_PATH=/path/to/service-account.json
 
 # Google Cloud Project ID (optional, usually auto-detected from credentials)
@@ -166,11 +163,41 @@ DB_PATH=./msa_extractor.db
 # MAX_TEXT_LENGTH=50000
 
 # ============================================================================
+# Common Configuration Examples
+# ============================================================================
+
+# Example 1: Text-only PDF → Vision LLM
+# EXTRACTION_METHOD=vision_all
+# LLM_PROCESSING_MODE=vision_llm
+
+# Example 2: Mixed PDF → OCR Image Pages → Text LLM
+# EXTRACTION_METHOD=ocr_images_only
+# LLM_PROCESSING_MODE=text_llm
+# OCR_ENGINE=tesseract
+
+# Example 3: Mixed PDF → Text + Images → Multimodal Vision LLM
+# EXTRACTION_METHOD=hybrid
+# LLM_PROCESSING_MODE=multimodal
+
+# Example 4: Mixed PDF → Text to Text LLM + Images to Vision LLM
+# EXTRACTION_METHOD=hybrid
+# LLM_PROCESSING_MODE=dual_llm
+
+# Example 5: Fully Scanned PDF → OCR → Text LLM
+# EXTRACTION_METHOD=ocr_all
+# LLM_PROCESSING_MODE=text_llm
+# OCR_ENGINE=tesseract
+
+# Example 6: Fully Scanned PDF → Vision LLM Direct
+# EXTRACTION_METHOD=vision_all
+# LLM_PROCESSING_MODE=vision_llm
+
+# ============================================================================
 # Notes
 # ============================================================================
 # - All paths use forward slashes or pathlib (cross-platform compatible)
 # - Boolean values: use "true" or "false" (case-insensitive)
 # - Empty values use system defaults
-# - See docs/configuration.md for detailed documentation
+# - See docs/EXTRACTION_ARCHITECTURE.md for detailed documentation
 # - See docs/LINUX_AND_DOCKER_SETUP.md for Docker configuration
 # ============================================================================
