--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3.8'
 
 services:
-  msa-extractor:
+  # CLI Service (for batch processing)
+  msa-extractor-cli:
     build: .
     volumes:
       # Mount input contracts (read-only)
@@ -10,14 +11,54 @@ services:
       - ./results:/app/results
       # Mount logs directory
       - ./logs:/app/logs
-      # Mount .env file (or use environment section below)
+      # Mount uploads directory (for temporary PDFs)
+      - ./uploads:/app/uploads
+      # Mount storage directory (for database)
+      - ./storage:/app/storage
+      # Mount .env file
       - ./.env:/app/.env:ro
     environment:
       # These can be set in .env file or here
       # - GEMINI_API_KEY=${GEMINI_API_KEY}
       # - GEMINI_TEXT_MODEL=${GEMINI_TEXT_MODEL:-gemini-2.5-pro}
       # - GEMINI_VISION_MODEL=${GEMINI_VISION_MODEL:-gemini-2.5-pro}
-      # - EXTRACTION_MODE=${EXTRACTION_MODE:-multimodal}
+      # - EXTRACTION_METHOD=${EXTRACTION_METHOD:-hybrid}
+      # - LLM_PROCESSING_MODE=${LLM_PROCESSING_MODE:-text_llm}
     # Default command (override when running)
     # command: python main.py --dir /app/contracts --out-dir /app/results
+
+  # API Service (FastAPI backend)
+  msa-extractor-api:
+    build: .
+    ports:
+      - "8000:8000"
+    volumes:
+      # Mount output directory
+      - ./results:/app/results
+      # Mount logs directory
+      - ./logs:/app/logs
+      # Mount uploads directory (for temporary PDFs)
+      - ./uploads:/app/uploads
+      # Mount storage directory (for database)
+      - ./storage:/app/storage
+      # Mount .env file
+      - ./.env:/app/.env:ro
+    environment:
+      # API configuration
+      - API_HOST=0.0.0.0
+      - API_PORT=8000
+      # These can be set in .env file or here
+      # - GEMINI_API_KEY=${GEMINI_API_KEY}
+      # - GEMINI_TEXT_MODEL=${GEMINI_TEXT_MODEL:-gemini-2.5-pro}
+      # - GEMINI_VISION_MODEL=${GEMINI_VISION_MODEL:-gemini-2.5-pro}
+      # - EXTRACTION_METHOD=${EXTRACTION_METHOD:-hybrid}
+      # - LLM_PROCESSING_MODE=${LLM_PROCESSING_MODE:-text_llm}
+    # Run FastAPI server
+    command: uvicorn api.main:app --host 0.0.0.0 --port 8000
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
