Enhance FastAPI Configuration and API Key Management
- Added new configuration options to `.env.example` for FastAPI server settings, including host, port, worker processes, and file upload limits.
- Introduced API key management in `config.py`, supporting multiple keys and ensuring backward compatibility with a single key.
- Updated documentation references for configuration files to improve clarity and usability for developers setting up the API.
- These changes enhance the flexibility and security of the API, providing a more robust configuration framework for future development.

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,46 @@ GEMINI_TEXT_MODEL=gemini-2.5-pro
 GEMINI_VISION_MODEL=gemini-2.5-pro
 
 # ============================================================================
+# FastAPI Server Configuration
+# ============================================================================
+
+# FastAPI server host (0.0.0.0 for all interfaces, 127.0.0.1 for localhost only)
+API_HOST=0.0.0.0
+
+# FastAPI server port
+API_PORT=8000
+
+# Number of worker processes (for production, use 4-8 workers)
+API_WORKERS=1
+
+# Enable auto-reload (for development only, set to false in production)
+API_RELOAD=false
+
+# Maximum file upload size in MB (default: 25MB)
+MAX_UPLOAD_SIZE_MB=25
+
+# Maximum concurrent background extraction tasks (default: 5)
+API_MAX_CONCURRENT_EXTRACTIONS=5
+
+# ============================================================================
+# API Authentication Configuration
+# ============================================================================
+
+# Enable API key authentication (set to true for production)
+# When enabled, all API requests must include a valid API key
+API_ENABLE_AUTH=false
+
+# API key(s) for authentication (required if API_ENABLE_AUTH=true)
+# Single key: API_KEY=your-secret-key-here
+# Multiple keys (comma-separated): API_KEY=key1,key2,key3
+#   - Any key in the list will be accepted
+#   - Useful for key rotation or multiple clients
+# Generate a strong, random key (e.g., using: openssl rand -hex 32)
+# Pass in request header: X-API-Key: <your-api-key>
+# Or query parameter: ?api_key=<your-api-key> (less secure, for testing only)
+API_KEY=
+
+# ============================================================================
 # Extraction Configuration (NEW ARCHITECTURE)
 # ============================================================================
 
@@ -143,16 +183,53 @@ LOG_CONSOLE_FORMAT=text           # Options: text, json
 # LOG_LEVEL_OCR=WARNING
 
 # ============================================================================
-# Paths & Storage
+# Persistence & Storage Configuration
 # ============================================================================
 
-# Output directory for extracted JSON files
-# Default: ./results
+# SQLite database path (default: ./storage/msa_extractor.db)
+# Database stores job records, extraction results (JSON), and logs
+DB_PATH=./storage/msa_extractor.db
+
+# Uploads directory (for temporary PDFs/DOCX files)
+# Files are stored here during extraction, then cleaned up after N days
+UPLOADS_DIR=./uploads
+
+# Results directory (for legacy mode - file-based JSON storage)
+# Only used when CLI is run with --legacy flag
+# Default and API always use database storage
+RESULTS_DIR=./results
+
+# Logs directory (for legacy mode - file-based log storage)
+# Only used when CLI is run with --legacy flag
+# Default and API always use database storage
+LOGS_DIR=./logs
+
+# Output directory for extracted JSON files (legacy, for batch processing)
 OUTPUT_DIR=./results
 
-# SQLite database path (if using database storage)
-# Default: ./msa_extractor.db
-DB_PATH=./msa_extractor.db
+# Cleanup configuration for uploaded PDFs
+CLEANUP_PDF_DAYS=7              # Delete PDFs older than N days
+CLEANUP_PDF_MAX_COUNT=1000      # Max PDFs to keep
+CLEANUP_PDF_MIN_COUNT=500       # Min PDFs to keep before cleanup
+
+# ============================================================================
+# GCP Configuration (Future Iterations - TODO)
+# ============================================================================
+
+# Google Cloud Project ID (for future GCS and Cloud SQL integration)
+# GCP_PROJECT_ID=your-project-id
+
+# Google Cloud Storage bucket (for future PDF storage)
+# GCP_STORAGE_BUCKET=your-bucket-name
+
+# Cloud SQL instance (for future database migration)
+# GCP_CLOUD_SQL_INSTANCE=your-instance-name
+
+# Enable GCS storage (future feature)
+# USE_GCS=false
+
+# Enable Cloud SQL (future feature)
+# USE_CLOUD_SQL=false
 
 # ============================================================================
 # Advanced Configuration
@@ -161,6 +238,10 @@ DB_PATH=./msa_extractor.db
 # Maximum text length for LLM processing (characters)
 # For longer docs, implement chunking + aggregation (deferred to next iteration)
 # MAX_TEXT_LENGTH=50000
+
+# Maximum length per metadata field (characters)
+# Each field value must not exceed this limit (default: 1000)
+# MAX_FIELD_LENGTH=1000
 
 # ============================================================================
 # Common Configuration Examples
@@ -192,12 +273,21 @@ DB_PATH=./msa_extractor.db
 # EXTRACTION_METHOD=vision_all
 # LLM_PROCESSING_MODE=vision_llm
 
+# Example 7: Production API with Authentication
+# API_ENABLE_AUTH=true
+# API_KEY=your-strong-random-key-here
+# API_WORKERS=4
+# API_RELOAD=false
+# MAX_UPLOAD_SIZE_MB=50
+
 # ============================================================================
 # Notes
 # ============================================================================
 # - All paths use forward slashes or pathlib (cross-platform compatible)
 # - Boolean values: use "true" or "false" (case-insensitive)
 # - Empty values use system defaults
-# - See docs/EXTRACTION_ARCHITECTURE.md for detailed documentation
-# - See docs/LINUX_AND_DOCKER_SETUP.md for Docker configuration
+# - See docs/architecture/EXTRACTION_ARCHITECTURE.md for extraction methods
+# - See docs/planning/API_DESIGN.md for API authentication details
+# - See docs/setup/configuration.md for complete configuration reference
+# - See docs/setup/LINUX_AND_DOCKER_SETUP.md for Docker configuration
 # ============================================================================
