Update .gcloudignore to Clarify Storage Directory Exclusion
- Added a note to the .gcloudignore file explaining that the 'storage/' Python module is necessary, while only database files are excluded using *.db patterns. This clarification aims to enhance understanding of the project's file management practices and ensure proper handling of the storage directory during deployment.

--- a/.gcloudignore
+++ b/.gcloudignore
@@ -62,7 +62,7 @@ contracts/
 results/
 logs/
 uploads/
-storage/
+# Note: storage/ Python module is needed, only database files are excluded via *.db patterns above
 *.json
 !package.json
 !package-lock.json
